[package]
description = "Two-step verification of HOTP/TOTP for Rust"
homepage = "https://github.com/messense/otpauth-rs"
keywords = ["otp", "auth", "password"]
license = "MIT"
name = "otpauth"
readme = "README.md"
repository = "https://github.com/messense/otpauth-rs.git"
version = "0.5.1"
edition = "2021"

[dependencies]
base32 = "0.5.1"
ring = "0.17.8"

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
rand = "0.8.5"
